# RoboSim

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml  debug-rne-ai.yml  ros2-bridge.yml  ros2-node.yml
adapters/ros2/: AGENTS.md
assets/robots/: cart_minimal.rne.robot.toml  collision_robot_a.rne.robot.toml  collision_robot_b.rne.robot.toml  diff_drive_urdf.rne.robot.toml  lekiwi.rne.robot.toml  lekiwi_so101.rne.robot.toml  mesh_diff_drive.rne.robot.toml  mm_lift.rne.robot.toml  mm_minimal.rne.robot.toml  mm_mobile.rne.robot.toml  rne_humanoid.rne.robot.toml  rne_quadruped.rne.robot.toml  so101.rne.robot.toml  unitree_g1.rne.robot.toml  unitree_g1_29dof_dex3_fixed.rne.robot.toml  unitree_g1_dynamic.rne.robot.toml  unitree_g1_fixed.rne.robot.toml  unitree_go2.rne.robot.toml  unitree_go2_dynamic.rne.robot.toml
assets/scenes/: cart_minimal.rne.scene.toml  deformable_cable.rne.scene.toml  deformable_cloth.rne.scene.toml  episode_diff_drive.rne.scene.toml  lekiwi.rne.scene.toml  lekiwi_so101.rne.scene.toml  mesh_diff_drive.rne.scene.toml  mm_lift.rne.scene.toml  mm_lift_pick.rne.scene.toml  mm_minimal.rne.scene.toml  mm_minimal_clutter.rne.scene.toml  mm_minimal_grasp.rne.scene.toml  mm_minimal_transport.rne.scene.toml  mm_mobile.rne.scene.toml  mm_mobile_clutter.rne.scene.toml  mm_mobile_hero.rne.scene.toml  multi_robot_collision.rne.scene.toml  rne_humanoid.rne.scene.toml  rne_quadruped.rne.scene.toml  so101.rne.scene.toml  unitree_g1.rne.scene.toml  unitree_g1_cloth_handling.rne.scene.toml  unitree_g1_dex3_pick_place.rne.scene.toml  unitree_g1_dynamic.rne.scene.toml  unitree_g1_factory.rne.scene.toml  unitree_g1_parts_pick_place.rne.scene.toml  unitree_go2.rne.scene.toml  unitree_go2_dynamic.rne.scene.toml
crates/rne_ai/: Cargo.toml
crates/rne_ai/src/: action.rs  camera.rs  domain_randomization.rs  episode.rs  goal.rs  grasp.rs  joint_trajectory.rs  lib.rs  lidar.rs  mm_lift_kinematics.rs  mm_minimal_kinematics.rs  multi_robot.rs  observation.rs  policy.rs  reach.rs  render.rs  reward.rs  rng.rs  transport.rs
crates/rne_ai/src/agent/: components.rs  diff_drive.rs  mod.rs  shared.rs  spawn.rs  systems.rs
crates/rne_ai/src/env/: mod.rs
crates/rne_ai/src/env/diff_drive/: mod.rs  sim.rs  vectorized.rs
crates/rne_ai/src/env/mobile_manipulator/: drive.rs  episode.rs  mod.rs  sim.rs  vectorized.rs
crates/rne_ai/src/env/urdf_scene/: humanoid_episode.rs  lekiwi_drive.rs  mod.rs  quadruped.rs  quadruped_episode.rs  unitree_g1_dex3.rs  unitree_g1_dex3_episode.rs  unitree_g1_episode.rs  unitree_g1_gait.rs  unitree_g1_gait_episode.rs  unitree_g1_inspection.rs  unitree_g1_inspection_episode.rs  unitree_g1_parts_episode.rs  unitree_go2_episode.rs  unitree_go2_gait.rs
crates/rne_ai/tests/: rng_compat.rs
crates/rne_assets/: Cargo.toml
crates/rne_assets/src/: error.rs  lib.rs  pipeline.rs  robot.rs  scene.rs  spawn.rs
crates/rne_assets/tests/fixtures/: diff_drive.rne.robot.toml  diff_drive_urdf.rne.robot.toml  episode_diff_drive.rne.scene.toml  mesh_diff_drive.rne.robot.toml  mm_mobile.rne.robot.toml
crates/rne_core/: Cargo.toml
crates/rne_core/src/: app.rs  lib.rs  rng.rs  schedule.rs  time.rs
crates/rne_data/: Cargo.toml
crates/rne_data/src/: bus.rs  frame.rs  lib.rs  payloads.rs  stream.rs
crates/rne_deformable/: Cargo.toml
crates/rne_deformable/src/: collision.rs  components.rs  lib.rs  resources.rs  systems.rs
crates/rne_ecs/: Cargo.toml
crates/rne_ecs/src/: components.rs  entity.rs  lib.rs
crates/rne_log/: Cargo.toml
crates/rne_log/src/: lib.rs  record.rs  replay.rs
crates/rne_math/: Cargo.toml
crates/rne_math/src/: lib.rs  transform.rs  units.rs
crates/rne_physics/: Cargo.toml
crates/rne_physics_rapier/: Cargo.toml
crates/rne_physics_rapier/src/: backend.rs  convert.rs  lib.rs
crates/rne_py/: Cargo.toml
crates/rne_py/src/: lib.rs  sim.rs
crates/rne_render/: Cargo.toml
crates/rne_render/src/: backend.rs  camera.rs  depth.rs  headless.rs  image.rs  lib.rs  lidar.rs  mesh.rs  mesh_cache.rs  pass.rs  path.rs  scene.rs  visual.rs
crates/rne_render_wgpu/: Cargo.toml
crates/rne_render_wgpu/src/: backend.rs  camera.rs  lib.rs  overlay.rs  primitive.rs  viewer.rs
crates/rne_robot/: Cargo.toml
crates/rne_robot/src/: actuator.rs  commands.rs  components.rs  diff_drive.rs  joint.rs  lib.rs  systems.rs
crates/rne_sensor/: Cargo.toml
crates/rne_sensor/src/: camera.rs  components.rs  imu.rs  lib.rs  lidar.rs  noise.rs  systems.rs  wheel_encoder.rs
crates/rne_urdf_import/: Cargo.toml
crates/rne_urdf_import/src/: articulation.rs  geometry.rs  lib.rs  parse.rs  schema.rs  spawn.rs
crates/rne_urdf_import/tests/fixtures/: mesh_collision_base.urdf  mesh_diff_drive.urdf  minimal_diff_drive.urdf  mm_minimal_arm.urdf  mm_mobile.urdf  prismatic_slider.urdf
crates/rne_urdf_import/tests/fixtures/mesh_diff_drive_package/meshes/: base_link.stl
crates/rne_world/: Cargo.toml
crates/rne_world/src/: components.rs  frame_graph.rs  lib.rs  resources.rs  systems.rs  transform.rs
docs/: PLAN_ROBOT_BEHAVIOR_CI.md  ROADMAP.md
docs/architecture/: 000_overview.md  002_robot_native.md  005_data_bus.md  (+5 more)
examples/: README.md
examples/00_hello_world/: Cargo.toml  main.rs
examples/01_diff_drive_lidar/: Cargo.toml  main.rs
examples/01_falling_cube/: Cargo.toml  main.rs
examples/06_scene_load/: Cargo.toml  main.rs
examples/07_render_primitives/: Cargo.toml  main.rs
examples/09_urdf_mesh_render/: Cargo.toml  main.rs
examples/13_multi_robot_agent/: Cargo.toml  main.rs
examples/14_interactive_viewer/: Cargo.toml  main.rs
examples/18_readme_hero/: Cargo.toml  main.rs
examples/19_lidar_render/: Cargo.toml  main.rs
examples/20_mobile_manipulator_arm/: Cargo.toml  main.rs
examples/32_lift_pick_place_hero/: Cargo.toml  main.rs
examples/41_unitree_g1_parts_pick_place/: Cargo.toml  main.rs
scripts/: convert_unitree_collada.py  gen_lekiwi_base_urdf.py  gen_lekiwi_so101_urdf.py  pinocchio_reference.py  requirements-pinocchio.txt
xtask/: Cargo.toml
(+159 files in other folders)
