[workspace]
members = [
  "crates/rne_math",
  "crates/rne_core",
  "crates/rne_ecs",
  "crates/rne_world",
  "crates/rne_physics",
  "crates/rne_physics_rapier",
  "crates/rne_robot",
  "crates/rne_data",
  "crates/rne_log",
  "crates/rne_sensor",
  "crates/rne_render",
  "crates/rne_render_wgpu",
  "crates/rne_ai",
  "crates/rne_assets",
  "crates/rne_py",
  "crates/rne_urdf_import",
  "adapters/ros2/rne_adapter_ros2",
  "examples/00_hello_world",
  "examples/01_falling_cube",
  "examples/01_diff_drive_lidar",
  "examples/02_render_clear",
  "examples/03_urdf_import",
  "examples/05_episode_diff_drive",
  "examples/06_scene_load",
  "examples/07_render_primitives",
  "examples/08_scene_episode",
  "examples/09_urdf_mesh_render",
  "examples/10_vectorized_episode",
  "examples/11_agent_policy",
  "examples/12_shared_world_agent",
  "examples/13_multi_robot_agent",
  "examples/14_interactive_viewer",
  "examples/15_asset_hot_reload",
  "examples/16_goal_conditioned_agent",
  "examples/17_multi_robot_collision",
  "examples/18_readme_hero",
  "examples/19_lidar_render",
  "examples/20_mobile_manipulator_arm",
  "tests/determinism",
  "tools/rne_asset_cli",
  "xtask",
]
exclude = [
  "adapters/ros2/rne_ros2_node",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rsasaki0109/RoboSim"
version = "0.5.0"

[workspace.dependencies]
anyhow = "1"
bevy_ecs = "0.15"
glam = { version = "0.29", features = ["serde"] }
petgraph = "0.7"
rapier3d = "0.22"
serde = { version = "1", features = ["derive"] }
smallvec = { version = "1", features = ["serde"] }
thiserror = "2"
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
wgpu = "24"
pollster = "0.4"
pyo3 = { version = "0.23", features = ["abi3-py39"] }
roxmltree = "0.20"
