[package]
name = "rne_ai"
description = "Episode API, rewards, and policy traits for Robot Native Engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
rne_assets = { path = "../rne_assets" }
rne_core = { path = "../rne_core" }
rne_data = { path = "../rne_data" }
rne_ecs = { path = "../rne_ecs" }
rne_log = { path = "../rne_log" }
rne_math = { path = "../rne_math" }
rne_physics = { path = "../rne_physics" }
rne_physics_rapier = { path = "../rne_physics_rapier" }
rne_robot = { path = "../rne_robot" }
rne_render = { path = "../rne_render" }
rne_sensor = { path = "../rne_sensor" }
rne_urdf_import = { path = "../rne_urdf_import" }
rne_world = { path = "../rne_world" }

[dev-dependencies]
approx = "0.5"
