[package]
name = "rne_assets"
description = "RNE scene and robot asset formats (.rne.scene.toml / .rne.robot.toml)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rne_ecs = { path = "../rne_ecs" }
rne_math = { path = "../rne_math" }
rne_physics = { path = "../rne_physics" }
rne_render = { path = "../rne_render" }
rne_robot = { path = "../rne_robot" }
rne_urdf_import = { path = "../../adapters/ros2/rne_urdf_import" }
rne_world = { path = "../rne_world" }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
approx = "0.5"
