[package]
name = "rne_py"
description = "Python bindings for Robot Native Engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "rne_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py39"] }
rne_ai = { path = "../rne_ai" }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[features]
default = []
extension-module = ["pyo3/extension-module"]
