[package]
name = "rne_render"
description = "Render backend traits for Robot Native Engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
rne_core = { path = "../rne_core" }
rne_math = { path = "../rne_math" }
rne_world = { path = "../rne_world" }
serde = { workspace = true }
thiserror = { workspace = true }
tobj = { workspace = true }

[dev-dependencies]
approx = "0.5"
