[package]
name = "rne_render_wgpu"
description = "wgpu render backend for Robot Native Engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
viewer = ["dep:winit"]

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
rne_math = { path = "../rne_math" }
rne_render = { path = "../rne_render" }
thiserror = { workspace = true }
wgpu = "24"
winit = { version = "0.30", optional = true }

[dev-dependencies]
approx = "0.5"
