[package]
name = "rne_urdf_import"
description = "Minimal URDF importer for Robot Native Engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rne_ecs = { path = "../rne_ecs" }
rne_math = { path = "../rne_math" }
rne_physics = { path = "../rne_physics" }
rne_render = { path = "../rne_render" }
rne_robot = { path = "../rne_robot" }
rne_world = { path = "../rne_world" }
roxmltree = "0.20"
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5"
rne_core = { path = "../rne_core" }
rne_physics_rapier = { path = "../rne_physics_rapier" }
