[package]
name = "falling_cube"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rne_core = { path = "../../crates/rne_core" }
rne_ecs = { path = "../../crates/rne_ecs" }
rne_math = { path = "../../crates/rne_math" }
rne_physics = { path = "../../crates/rne_physics" }
rne_physics_rapier = { path = "../../crates/rne_physics_rapier" }
rne_world = { path = "../../crates/rne_world" }

[[example]]
name = "01_falling_cube"
path = "main.rs"
