[package]
name = "scene_load"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rne_assets = { path = "../../crates/rne_assets" }
rne_core = { path = "../../crates/rne_core" }
rne_ecs = { path = "../../crates/rne_ecs" }
rne_math = { path = "../../crates/rne_math" }
rne_physics = { path = "../../crates/rne_physics" }
rne_physics_rapier = { path = "../../crates/rne_physics_rapier" }
rne_robot = { path = "../../crates/rne_robot" }
rne_urdf_import = { path = "../../crates/rne_urdf_import" }
rne_world = { path = "../../crates/rne_world" }

[[example]]
name = "06_scene_load"
path = "main.rs"
