[package]
name = "multi_robot_agent"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rne_ai = { path = "../../crates/rne_ai" }
rne_math = { path = "../../crates/rne_math" }
rne_robot = { path = "../../crates/rne_robot" }

[[example]]
name = "13_multi_robot_agent"
path = "main.rs"
