[package]
name = "lidar_render"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rne_core = { path = "../../crates/rne_core" }
rne_data = { path = "../../crates/rne_data" }
rne_ecs = { path = "../../crates/rne_ecs" }
rne_math = { path = "../../crates/rne_math" }
rne_physics = { path = "../../crates/rne_physics" }
rne_physics_rapier = { path = "../../crates/rne_physics_rapier" }
rne_render = { path = "../../crates/rne_render" }
rne_render_wgpu = { path = "../../crates/rne_render_wgpu" }
rne_robot = { path = "../../crates/rne_robot" }
rne_sensor = { path = "../../crates/rne_sensor" }
rne_world = { path = "../../crates/rne_world" }

[[example]]
name = "19_lidar_render"
path = "main.rs"
