[package]
name = "lift_pick_place_hero"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
image = "0.25"
png = "0.17"
rne_ai = { path = "../../crates/rne_ai" }
rne_math = { path = "../../crates/rne_math" }
rne_world = { path = "../../crates/rne_world" }
rne_render = { path = "../../crates/rne_render" }
rne_render_wgpu = { path = "../../crates/rne_render_wgpu", features = ["viewer"] }

[[example]]
name = "32_lift_pick_place_hero"
path = "main.rs"
