[package]
name = "unitree_g1_parts_pick_place"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rne_ai = { path = "../../crates/rne_ai" }
rne_math = { path = "../../crates/rne_math" }
rne_render = { path = "../../crates/rne_render" }
rne_render_wgpu = { path = "../../crates/rne_render_wgpu" }
png = "0.17"
image = { version = "0.25", default-features = false, features = ["png"] }

[[example]]
name = "41_unitree_g1_parts_pick_place"
path = "main.rs"
